--- a/Veg.html
+++ b/Veg.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="css/4S1KrRELUsPW.css">
     <link rel="stylesheet" type="text/css" href="css/v6mS0LGdZG5E.css">
     <link rel="stylesheet" type="text/css" href="css/oCEjUZZFGIAd.css">
-    <link rel="shortcut icon" href="images/Mxu3ZD1PVYFV.png">
+    <link rel="shortcut icon" href="rajeshimedia/logo.png">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
