--- a/Gallery.html
+++ b/Gallery.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="css/4S1KrRELUsPW.css">
     <link rel="stylesheet" type="text/css" href="css/v6mS0LGdZG5E.css">
     <link rel="stylesheet" type="text/css" href="css/oCEjUZZFGIAd.css">
-    <link rel="shortcut icon" href="images/Mxu3ZD1PVYFV.png">
+    <link rel="shortcut icon" href="rajeshimedia/logo.png">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -1003,8 +1003,8 @@
                                     <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span>
                                     <span class="icon-bar bottom-bar"></span>
                                 </button>
-                                <a class="navbar-brand" href="index.html"><img src="images/HN-Caterers-White-Logo.png"
-                                        alt="logo" class="img-responsive logo-image" data-aos="zoom-in"
+                                <a class="navbar-brand" href="index.html"><img src="rajeshimedia/logo.png" alt="logo"
+                                        class="img-responsive logo-image" data-aos="zoom-in"
                                         data-aos-duration="3000"></a>
                             </div>
 
