--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -244,8 +244,8 @@
                                     <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span>
                                     <span class="icon-bar bottom-bar"></span>
                                 </button>
-                                <a class="navbar-brand" href="index.html"><img src="images/HN-Caterers-White-Logo.png"
-                                        alt="logo" class="img-responsive logo-image" data-aos="zoom-in"
+                                <a class="navbar-brand" href="index.html"><img src="rajeshimedia/logo.png" alt="logo"
+                                        class="img-responsive logo-image" data-aos="zoom-in"
                                         data-aos-duration="3000"></a>
                             </div>
 
