--- a/About.html
+++ b/About.html
@@ -1047,13 +1047,13 @@
                 <div class="col-lg-6 about-right-faq">
                     <h5 class="sub-title mb-2">About Us</h5>
                     <h3 class="title-style text-start">Welcome to Sree Rajesh Caterers</h3>
-                    <p class="abtcontent">Established in 2016 by MVV Hanuman, Sree Rajesh Caterers has been a culinary
-                        beacon
-                        based in Kukatpally, Hyderabad, setting the standard for exceptional catering experiences. With
-                        a dedicated team of 30 professionals, including skilled chef’s adept in various cuisines, we
-                        have been crafting culinary experiences that transcend ordinary catering, ensuring every event
-                        is a symphony of taste and excellence. Our culinary expertise spans Telugu, South Indian, and
-                        North Indian menus, tailoring each dish to perfection.
+                    <p class="abtcontent">With over 25+ years of experience in event management and catering, we have
+                        been
+                        delivering exceptional services since 2000, creating unforgettable experiences for our clients.
+                        Our services are designed to cater to gatherings of all sizes, from intimate groups of 100
+                        guests to grand celebrations hosting up to 5,000 guests. Whether it’s a wedding, corporate
+                        event, birthday celebration, or any special occasion, we bring passion, professionalism, and
+                        culinary excellence to ensure every moment is truly perfect.
                     </p>
                     <!--<a class="btn btn-style1 mt-md-5 mt-4" href="#about"> Read More </a>-->
                 </div>
@@ -1079,9 +1079,8 @@
                         building a trusted clientele that includes corporates, banks, and high-net-worth individuals.
                         Among our esteemed clientele are State Bank of India, Blue star, Sria banquets, TSERC, Worley,
                         INTEQ and Akems to name a few. At Sree Rajesh Caterers, our commitment to quality and taste
-                        remains
-                        unwavering, making us the go-to-choice for those who seek an exceptional and flavorful catering
-                        experience.</p>
+                        remains unwavering, making us the go-to-choice for those who seek an exceptional and flavorful
+                        catering experience.</p>
                     <a class="btn btn-style1 mt-md-5 mt-4" href="javascript:void(0)"> Read More </a>
                 </div>
 
@@ -1160,15 +1159,13 @@
 
                                     <blockquote>
                                         <i class="fa fa-quote-right"></i>
-                                        <q>The food is really amazing. Liked all the dishes. Especially really happy
-                                            with the team who came to serve the food. Really appreciate the efforts they
-                                            have put in. Would like to order food again for some occasion. I already got
-                                            a lot of request from some of the colleagues , friends and family for the
-                                            contact of the Caterer.</q>
+                                        <q>I recommend everyone to use them. You will feel so special and not just like
+                                            another bride. We did a sit down dinner and the service was AMAZING. No one
+                                            had to wait on food or drinks.</q>
                                     </blockquote>
                                     <div class="testi-des">
                                         <div class="peopl align-self">
-                                            <h3>Deepak Talluri</h3>
+                                            <h3>RAJENDAR PRASAD</h3>
 
                                         </div>
                                     </div>
@@ -1181,16 +1178,18 @@
 
                                     <blockquote>
                                         <i class="fa fa-quote-right"></i>
-                                        <q>I really wanted to call you and give a review. We are very very very happy
-                                            with food and your service. All the guests made a point to come and give a
-                                            review about the food. Whatever the function is how ever big the event maybe
-                                            , only thing that satisfies is food. I should really really appreciate for
-                                            the service you are providing. I started doing free marketing for your brand
-                                            😅. May you grow more and more.</q>
+                                        <q>AAAAAAmazing! That’s the best way to put it. From price, to food, to how the
+                                            wedding day went, Simply Catering was just amazing. Event was the
+                                            coordinator for my actual wedding day and it went on without a hitch.
+                                            Everybody raved about the food. It was exactly what I pictured when I
+                                            thought of my wedding day caterer. Thank you so much for everything, Sree
+                                            Rajesh Caterers!! My husband has 4 more brothers and sisters who will
+                                            eventually be getting married and we’ll definitely we recommending you to
+                                            them when the time comes!! Thanks again!</q>
                                     </blockquote>
                                     <div class="testi-des">
                                         <div class="peopl align-self">
-                                            <h3>Sindhu Paladhi</h3>
+                                            <h3>VIKRAM RAO</h3>
 
                                         </div>
                                     </div>
@@ -1203,94 +1202,16 @@
 
                                     <blockquote>
                                         <i class="fa fa-quote-right"></i>
-                                        <q>The best catering services I have used so far. They have variety of delicious
-                                            dishes. The food and service offered by them is of top quality. I have used
-                                            their catering services for 4 times so far and I am completely satisfied.
-                                            Highly recommend them for all occasions.</q>
+                                        <q>Working with Sree Rajesh Caterers on my wedding day was just amazing. On my
+                                            wedding day, everyone was praising the food and service and they were really
+                                            professional. The bartenders were really kind and did an excellent job. I'm
+                                            very happy I decided to have Sree Rajesh Catering handle the catering for my
+                                            wedding. They performed incredibly well on everything. Everything was
+                                            flawless down to the smallest detail!</q>
                                     </blockquote>
                                     <div class="testi-des">
                                         <div class="peopl align-self">
-                                            <h3>Ranadhir Reddy V.P</h3>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="item">
-                            <div class="testimonial-content">
-                                <div class="testimonial">
-
-                                    <blockquote>
-                                        <i class="fa fa-quote-right"></i>
-                                        <q>Hanuman and his team able to quickly accept our order for 250+ people and
-                                            delivered timely! We always prefer and recommend Hanuman caterers for our
-                                            events at Rajapushpa Regalia , delicious food including starters with
-                                            phenomenal catering service. We do have some special needs and they went
-                                            beyond to fulfill those.</q>
-                                    </blockquote>
-                                    <div class="testi-des">
-                                        <div class="peopl align-self">
-                                            <h3>Satish Kumar Ankala</h3>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="item">
-                            <div class="testimonial-content">
-                                <div class="testimonial">
-
-                                    <blockquote>
-                                        <i class="fa fa-quote-right"></i>
-                                        <q>Got reference from my relative of HN catering service. We have availed their
-                                            service for gruha pravesham , they have arrived on time behaved very
-                                            professionally , treated guests with respect and the main thing Food is
-                                            awesome , everyone complemented about the taste and many have taken contact.
-                                            Thank you HN catering for wonderful service.</q>
-                                    </blockquote>
-                                    <div class="testi-des">
-                                        <div class="peopl align-self">
-                                            <h3>Nikhil Vallabhaneni</h3>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="testimonial-content">
-                                <div class="testimonial">
-
-                                    <blockquote>
-                                        <i class="fa fa-quote-right"></i>
-                                        <q>Hn catering food delecious , their Presentation also good , food was very
-                                            tasty , I m very much satisfied with them.</q>
-                                    </blockquote>
-                                    <div class="testi-des">
-                                        <div class="peopl align-self">
-                                            <h3>Sahithi Nalla </h3>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="testimonial-content">
-                                <div class="testimonial">
-
-                                    <blockquote>
-                                        <i class="fa fa-quote-right"></i>
-                                        <q>Professionally arranged , food was very tasty and all the guests who are
-                                            present they appreciated.</q>
-                                    </blockquote>
-                                    <div class="testi-des">
-                                        <div class="peopl align-self">
-                                            <h3>Nagarjuna Reddy Maddika</h3>
+                                            <h3>SEETHA RAMA RAJU</h3>
 
                                         </div>
                                     </div>
