--- a/Contact.html
+++ b/Contact.html
@@ -546,7 +546,8 @@
                         The Best
                         Caterers In Town</p>
                     <p class="pull-right" data-aos="fade-left" data-aos-duration="3000"><i class="fa fa-phone"></i>Order
-                        Online 8885467894</p>
+                        Online
+                        92462 41199</p>
                 </div>
             </div>
         </div>
@@ -661,49 +662,18 @@
                     <h5 class="sub-title">Find Us</h5>
                     <h3 class="title-style">Address Info</h3>
                 </div>
-                <div class="cont-details" data-aos="fade-up" data-aos-duration="3000">
-                    <div class="cont-top margin-up">
-                        <div class="cont-left text-center">
-                            <i class="fa fa-map"></i>
-                        </div>
-                        <div class="cont-right">
-                            <h6>Address</h6>
-                            <p>Plot no 70, Sai nagar west, Kukatpally 500072.</p>
-                        </div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-4 contact-address" data-aos="zoom-in" data-aos-duration="3000">
+                        <i class="fa fa-map-marker"></i>
+                        <p>6-1-311, Sahu Rd, Prasanth Nagar, Miyapur, Hyderabad 500049 </p>
                     </div>
-                    <div class="cont-top margin-up">
-                        <div class="cont-left text-center">
-                            <i class="fa fa-phone"></i>
-                        </div>
-                        <div class="cont-right">
-                            <h6>Call Us</h6>
-                            <p><a href="https://api.whatsapp.com/send?phone=918885467894" class="float"
-                                    target="_blank">+91 8885467894</a></p>
-                            <p><a href="tel:+91 9399902817">+91 9399902817</a></p>
-                        </div>
+                    <div class="col-md-4 col-sm-4 contact-address" data-aos="zoom-in" data-aos-duration="3000">
+                        <i class="fa fa-phone"></i>
+                        <p>92462 41199</p>
                     </div>
-                    <div class="cont-top margin-up">
-                        <div class="cont-left text-center">
-                            <i class="fa fa-envelope"></i>
-                        </div>
-                        <div class="cont-right">
-                            <h6>Email Us</h6>
-                            <p><a href="mailto:hn.cateringservices@gmail.com" class="mail"><span
-                                        class="__cf_email__">hn.cateringservices@gmail.com</span></a></p>
-                            <p><a href="mailto:hanuma.marilla@gmail.com" class="mail"><span
-                                        class="__cf_email__">hanuma.marilla@gmail.com</span></a></p>
-                        </div>
-                    </div>
-                    <div class="cont-top margin-up">
-                        <div class="cont-left text-center">
-                            <i class="fa fa-headphones"></i>
-                        </div>
-                        <div class="cont-right">
-                            <h6>Support</h6>
-                            <p><a href="https://api.whatsapp.com/send?phone=918885467894" class="float"
-                                    target="_blank">+91 8885467894</a></p>
-                            <p><a href="tel:+91 9399902817">+91 9399902817</a></p>
-                        </div>
+                    <div class="col-md-4 col-sm-4 contact-address" data-aos="zoom-in" data-aos-duration="3000">
+                        <i class="fa fa-envelope"></i>
+                        <p>sreerajeshcateringsupply@yahoo.com</p>
                     </div>
                 </div>
             </div>
@@ -729,8 +699,9 @@
                 <div class="row" data-aos="fade-down" data-aos-duration="3000">
                     <div class="col-lg-3 col-sm-6">
                         <h3>About Us</h3>
-                        <p>Welcome to the most promising caterers in Hyderabad delighting guests with excellent catering
-                            services in the past 10 years.</p>
+                        <p>With over 25+ years of experience in event management and catering, we have been delivering
+                            exceptional
+                            services since 2000, creating unforgettable experiences for our clients.</p>
                         <div class="columns-2 abtus">
                             <ul class="social" style="margin-top: 30px;">
                                 <li><a href="#facebook"><i class="fa fa-facebook"></i></a>
@@ -757,8 +728,9 @@
                     <div class="col-lg-3 col-sm-6 column ps-xl-5 pe-lg-0 mt-lg-0 mt-4">
                         <h3>Address</h3>
                         <ul class="footer-contact-list">
-                            <li class=""><i class="fa fa-map-marker"></i><span style="font-size: 18px;">Plot no 70, Sai
-                                    Nagar West, Kukatpally 500072.</span></li>
+                            <li class=""><i class="fa fa-map-marker"></i><span style="font-size: 18px;">6-1-311, Sahu
+                                    Rd, Prasanth Nagar,
+                                    Miyapur, Hyderabad 500049</span></li>
                             <p class="mt-2" style="margin-top: 20px;"></p>
                             <div class="footer-botm">
                                 <h6>Open Hours :</h6>
@@ -772,18 +744,17 @@
                     <div class="col-lg-4 col-sm-6 column mt-lg-0 mt-4 ps-xl-5">
                         <h3>Contact Info</h3>
                         <ul class="footer-contact-list">
+
                             <li style=" margin-top: 5px;"><i class="fa fa-whatsapp"></i><span><a
-                                        href="https://api.whatsapp.com/send?phone=918885467894" class="float"
-                                        target="_blank">+91 8885467894</a></span></li>
-                            <li class="mt-2"><i class="fa fa-phone"></i><span><a href="tel:+91 8885467894">+91
-                                        8885467894</a></span></li>
-                            <li class="mt-2"><i class="fa fa-phone"></i><span><a href="tel:+91 9399902817">+91
-                                        9399902817</a></span></li>
-                            <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:hn.cateringservices@gmail.com">hn.cateringservices@gmail.com</a></span>
+                                        href="https://api.whatsapp.com/send?phone=919246241199" class="float"
+                                        target="_blank">+91
+                                        92462 41199</a></span></li>
+                            <li class="mt-2"><i class="fa fa-phone"></i><span><a href="tel:+91 9246241199">+91 92462
+                                        41199</a></span>
                             </li>
                             <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:hanuma.marilla@gmail.com">hanuma.marilla@gmail.com</a></span></li>
+                                        href="mailto:sreerajeshcateringsupply@yahoo.com">sreerajeshcateringsupply@yahoo.com</a></span>
+                            </li>
                         </ul>
                         <!--<p class="sub">Subscribe to our mailing list and get updates to your email inbox.</p>-->
                     </div>
