--- a/Veg.html
+++ b/Veg.html
@@ -225,7 +225,8 @@
                         The Best
                         Caterers In Town</p>
                     <p class="pull-right" data-aos="fade-left" data-aos-duration="3000"><i class="fa fa-phone"></i>Order
-                        Online 8885467894</p>
+                        Online
+                        92462 41199</p>
                 </div>
             </div>
         </div>
@@ -404,8 +405,9 @@
                 <div class="row" data-aos="fade-down" data-aos-duration="3000">
                     <div class="col-lg-3 col-sm-6">
                         <h3>About Us</h3>
-                        <p>Welcome to the most promising caterers in Hyderabad delighting guests with excellent catering
-                            services in the past 10 years.</p>
+                        <p>With over 25+ years of experience in event management and catering, we have been delivering
+                            exceptional
+                            services since 2000, creating unforgettable experiences for our clients.</p>
                         <div class="columns-2 mt-4">
                             <ul class="social" style="margin-top: 30px;">
                                 <li><a href="#facebook"><i class="fa fa-facebook"></i></a>
@@ -433,8 +435,9 @@
                     <div class="col-lg-3 col-sm-6 column ps-xl-5 pe-lg-0 mt-lg-0 mt-4">
                         <h3>Address</h3>
                         <ul class="footer-contact-list">
-                            <li class=""><i class="fa fa-map-marker"></i><span style="font-size: 18px;">Plot no 70, Sai
-                                    Nagar West, Kukatpally 500072.</span></li>
+                            <li class=""><i class="fa fa-map-marker"></i><span style="font-size: 18px;">6-1-311, Sahu
+                                    Rd, Prasanth Nagar,
+                                    Miyapur, Hyderabad 500049</span></li>
                             <p class="mt-4" style="margin-top: 20px;"></p>
                             <div class="footer-botm mt-4">
                                 <h6>Open Hours :</h6>
@@ -450,17 +453,15 @@
                         <ul class="footer-contact-list">
 
                             <li style=" margin-top: 5px;"><i class="fa fa-whatsapp"></i><span><a
-                                        href="https://api.whatsapp.com/send?phone=918885467894" class="float"
-                                        target="_blank">+91 8885467894</a></span></li>
-                            <li class="mt-2"><i class="fa fa-phone"></i><span><a href="tel:+91 8885467894">+91
-                                        8885467894</a></span></li>
-                            <li class="mt-2"><i class="fa fa-phone"></i><span><a href="tel:+91 9399902817">+91
-                                        9399902817</a></span></li>
-                            <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:hn.cateringservices@gmail.com">hn.cateringservices@gmail.com</a></span>
+                                        href="https://api.whatsapp.com/send?phone=919246241199" class="float"
+                                        target="_blank">+91
+                                        92462 41199</a></span></li>
+                            <li class="mt-2"><i class="fa fa-phone"></i><span><a href="tel:+91 9246241199">+91 92462
+                                        41199</a></span>
                             </li>
                             <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:hanuma.marilla@gmail.com">hanuma.marilla@gmail.com</a></span></li>
+                                        href="mailto:sreerajeshcateringsupply@yahoo.com">sreerajeshcateringsupply@yahoo.com</a></span>
+                            </li>
                         </ul>
                     </div>
                 </div>
