--- a/index.html
+++ b/index.html
@@ -649,16 +649,18 @@
             <div class="col-sm-6 grids_info" data-aos="zoom-in-right" data-aos-duration="3000">
               <i class="fa fa-cutlery"></i>
               <div class="detail mt-sm-4 mt-3">
-                <h4>Unparalleled quality</h4>
-                <p class="learn">We ensure every dish reflects our dedication to excellence</p>
+                <h4>Unmatched Quality</h4>
+                <p class="learn">Savor the perfection of premium ingredients and meticulous preparation, ensuring
+                  excellence in every single bite.</p>
               </div>
             </div>
 
             <div class="col-sm-6 grids_info mt-sm-0 mt-4" data-aos="zoom-in-right" data-aos-duration="3000">
               <i class="fa fa-user"></i>
               <div class="detail mt-sm-4 mt-3">
-                <h4>Rich taste</h4>
-                <p class="learn">Our chefs craft each dish with delicious flavors and unique recipes</p>
+                <h4>Exquisite Taste</h4>
+                <p class="learn">Our culinary masters blend secret spices and authentic recipes to deliver a truly
+                  unforgettable feast of flavors.</p>
               </div>
             </div>
           </div>
