--- a/index.html
+++ b/index.html
@@ -377,11 +377,32 @@
 
     .w3l-footer-16 p.copy-text a {
       color: var(--primary-color);
-      /*text-decoration: underline;*/
+      position: relative;
+      text-decoration: none;
     }
 
     .w3l-footer-16 p.copy-text a:hover {
       color: #e2d811;
+    }
+
+    /* Bubble Animation Styles */
+    .bubbles-media {
+      display: inline-block;
+      position: relative;
+      color: #fff !important;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .bubble {
+      position: absolute;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 50%;
+      pointer-events: none;
+      z-index: 100;
+      opacity: 0;
+      bottom: 0;
+      transition: transform 1.5s ease-out, opacity 1.5s ease-out;
     }
 
     .w3l-footer-16 input[type="email"] {
@@ -477,25 +498,18 @@
       .features {
         margin-top: 2rem !important;
       }
+    }
 
-      /*////////////////////////////////////////////////*/
-      @media (max-width:992px) {
-        .logo-image {
-          width: 100% !important;
-          height: 50px;
-        }
+    /*///////////////////////////////////////////////*/
+    @media (max-width:600px) {
+      #main-navigation .navbar-brand {
+        padding: 10px 0;
       }
 
-      /*///////////////////////////////////////////////*/
-      @media (max-width:600px) {
-        #main-navigation .navbar-brand {
-          padding: 10px 0;
-        }
-
-        #main-navigation .navbar-toggle {
-          top: 5px;
-        }
+      #main-navigation .navbar-toggle {
+        top: 5px;
       }
+    }
 
 
 
@@ -1074,9 +1088,10 @@
       </div>
     </div>
     <div class="copy-section text-center py-4">
-      <p class="copy-text py-1">© 2023 Sree Rajesh Caterers. All rights reserved. Design by <a
-          href="https://skybell.in/" target="_blank"> SKYBELL</a>
-      </p>
+      <div class="container">
+        <p class="copy-text py-1">© 2026 Sree Rajesh Caterers. All rights reserved. Design by <a
+            href="https://thebubblesmedia.com/" class="bubbles-media" id="bubble-link">The Bubbles Media</a></p>
+      </div>
     </div>
   </footer>
   <!-- //footer -->
@@ -1115,6 +1130,37 @@
 
 
 
+  <script>
+    const bubbleLink = document.getElementById('bubble-link');
+    if (bubbleLink) {
+      bubbleLink.addEventListener('mouseenter', () => {
+        for (let i = 0; i < 20; i++) {
+          const bubble = document.createElement('div');
+          bubble.className = 'bubble';
+          const size = Math.random() * 8 + 6 + 'px';
+          bubble.style.width = size;
+          bubble.style.height = size;
+          bubble.style.left = Math.random() * 100 + '%';
+          bubble.style.bottom = '0';
+          bubbleLink.appendChild(bubble);
+
+          setTimeout(() => {
+            const xShift = (Math.random() - 0.5) * 50;
+            const yShift = -(Math.random() * 60 + 30);
+            bubble.style.transform = `translate(${xShift}px, ${yShift}px) scale(${Math.random() * 1.5 + 0.5})`;
+            bubble.style.opacity = '1';
+          }, 10);
+
+          setTimeout(() => {
+            bubble.style.opacity = '0';
+            setTimeout(() => {
+              bubble.remove();
+            }, 1000);
+          }, 800);
+        }
+      });
+    }
+  </script>
 </body>
 
 </html>
