--- a/index.html
+++ b/index.html
@@ -510,6 +510,10 @@
         top: 5px;
       }
     }
+
+
+
+    }
   </style>
 
 
@@ -676,23 +680,23 @@
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 mt-lg-0 mt-5">
-          <div class="row g-3 justify-content-center" style="display: flex; flex-wrap: wrap;">
-            <div class="col-lg-4 col-6" style="padding: 5px;">
+          <div class="row g-3" style="display: flex; flex-wrap: wrap;">
+            <div style="flex: 0 0 50%; max-width: 50%; padding: 5px;">
               <video src="rajeshimedia/1.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
                 data-aos="fade-down" data-aos-duration="1500"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
-            <div class="col-lg-4 col-6" style="padding: 5px;">
+            <div style="flex: 0 0 50%; max-width: 50%; padding: 5px;">
               <video src="rajeshimedia/2.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
                 data-aos="fade-down" data-aos-duration="2000"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
-            <div class="col-lg-4 col-6" style="padding: 5px;">
+            <div style="flex: 0 0 50%; max-width: 50%; padding: 5px;">
               <video src="rajeshimedia/3.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
                 data-aos="fade-up" data-aos-duration="2500"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
-            <div class="col-lg-4 col-6" style="padding: 5px;">
+            <div style="flex: 0 0 50%; max-width: 50%; padding: 5px;">
               <video src="rajeshimedia/4.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
                 data-aos="fade-up" data-aos-duration="3000"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
