--- a/index.html
+++ b/index.html
@@ -510,10 +510,6 @@
         top: 5px;
       }
     }
-
-
-
-    }
   </style>
 
 
@@ -681,25 +677,27 @@
         </div>
         <div class="col-lg-6 offset-lg-1 mt-lg-0 mt-5">
           <div class="row g-3" style="display: flex; flex-wrap: wrap;">
-            <div style="flex: 0 0 50%; max-width: 50%; padding: 5px;">
+            <div style="flex: 0 0 33.33%; max-width: 33.33%; padding: 5px;">
               <video src="rajeshimedia/1.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
                 data-aos="fade-down" data-aos-duration="1500"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
-            <div style="flex: 0 0 50%; max-width: 50%; padding: 5px;">
+            <div style="flex: 0 0 33.33%; max-width: 33.33%; padding: 5px;">
               <video src="rajeshimedia/2.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
                 data-aos="fade-down" data-aos-duration="2000"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
-            <div style="flex: 0 0 50%; max-width: 50%; padding: 5px;">
+            <div style="flex: 0 0 33.33%; max-width: 33.33%; padding: 5px;">
               <video src="rajeshimedia/3.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
                 data-aos="fade-up" data-aos-duration="2500"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
-            <div style="flex: 0 0 50%; max-width: 50%; padding: 5px;">
-              <video src="rajeshimedia/4.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
-                data-aos="fade-up" data-aos-duration="3000"
-                style="width: 100%; height: 180px; object-fit: cover;"></video>
+            <div style="display: flex; justify-content: center; width: 100%; padding: 5px;">
+              <div style="flex: 0 0 100%; max-width: 100%;">
+                <video src="rajeshimedia/4.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
+                  data-aos="fade-up" data-aos-duration="3000"
+                  style="width: 100%; height: 300px; object-fit: cover;"></video>
+              </div>
             </div>
           </div>
         </div>
