--- a/index.html
+++ b/index.html
@@ -510,6 +510,43 @@
         top: 5px;
       }
     }
+
+    /* Loader Styles */
+    .loader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #ffffff;
+      z-index: 9999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .loader-logo {
+      width: 180px;
+      height: auto;
+      animation: pulse 1.5s infinite ease-in-out;
+    }
+
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        opacity: 1;
+      }
+
+      50% {
+        transform: scale(1.05);
+        opacity: 0.8;
+      }
+
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
   </style>
 
 
@@ -520,9 +557,8 @@
 
   <!--Loader-->
   <div class="loader">
-    <div class="cssload-container">
-      <div class="cssload-circle"></div>
-      <div class="cssload-circle"></div>
+    <div class="loader-content">
+      <img src="rajeshimedia/logo.png" alt="Sree Rajesh Caterers" class="loader-logo">
     </div>
   </div>
 
